--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,2 +1,9 @@
 # TODO: add dockerfile configs for backend
 
+FROM python:3.8
+WORKDIR /backend
+ADD . /backend
+RUN apt-get update
+RUN pip install -r requirements.txt
+ENTRYPOINT ["python"]
+CMD ["run.py"]
