--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,38 @@
 # TODO: add docker compose config for backend, ingestion, neo4j and mysql
+version: '3.7'
+services:
+  backend:
+    build: ./backend
+    container_name: supa-backend
+    image: supa-backend:1.0
+    ports:
+      - "5000:5000"
+    environment:
+      BACKEND_HOST: '0.0.0.0'
+      BACKEND_PORT: 5000
+  ingestion:
+    build: ./ingestion
+    container_name: supa-ingestion
+    image: supa-ingestion:1.0
+    ports:
+      - "6000:6000"
+  mysql:
+    image: mysql:8.0.23
+    environment:
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_DATABASE: 'supa'
+    ports:
+      - "3306:3306"
+  neo4j:
+    image: neo4j:4.0.8
+    environment:
+      NEO4J_AUTH: 'none'
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+  admin:
+    image: adminer
+    ports:
+      - "8080:8080"
