--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,32 @@
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
+cryptography==3.3.1
+docker==4.4.1
+english==2020.7.0
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+monotonic==1.5
+mysqlclient==2.0.3
+neo4j==4.2.1
+neotime==1.7.4
+packaging==20.8
+pansi==2020.7.3
+prompt-toolkit==2.0.10
+py2neo==2020.1.1
+pycparser==2.20
+Pygments==2.7.4
+pyparsing==2.4.7
+pytz==2020.5
+requests==2.25.1
+six==1.15.0
 SQLAlchemy==1.3.22
+urllib3==1.26.2
+wcwidth==0.2.5
+websocket-client==0.57.0
 Werkzeug==1.0.1
