--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -21,6 +21,8 @@ services:
     restart: on-failure
     networks:
       - supa-network
+    volumes:
+      - ./backend:/backend
   mysql-test:
     image: mysql:8.0.23
     command: mysqld --default-authentication-plugin=mysql_native_password
