--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -23,6 +23,15 @@ services:
       - supa-network
     volumes:
       - ./backend:/backend
+  ingestion:
+    build: ./ingestion
+    container_name: supa-ingestion
+    ports:
+      - "6000:6000"
+    environment:
+      BACKEND_HOST: 'http://backend:5000'
+    networks:
+      - supa-network
   mysql-test:
     image: mysql:8.0.23
     command: mysqld --default-authentication-plugin=mysql_native_password
