--- a/chatbot/domain.yml
+++ b/chatbot/domain.yml
@@ -21,6 +21,9 @@ intents:
 
 entities:
 - use_class
+- postal_code
+- floor
+- unit
 
 slots:
   use_class:
@@ -69,6 +72,10 @@ responses:
         payload: "/clarify"
   utter_ask_edit_form:
   - text: "Which field do you want to edit?"
+  utter_verify:
+  - text: "Sure, let me help you with that! I will first need some information from you."
+  utter_clarify:
+  - text: "Sure, what would you like to clarify?"
   utter_ask_use_class:
   - text: "What will be the proposed use class?"
   utter_ask_use_desc:
@@ -97,6 +104,8 @@ responses:
   - text: "Oops, I didn't recognise the GFA! Note that it must be numeric!"
   utter_ask_review:
   - text: "Can you review the following details you've submitted? Do they look correct?"
+  utter_review_deny:
+  - text: "Can you tell me which fields need amendments?"
   utter_verifying:
   - text: "Thanks for the information! Give me a moment while I evaluate your proposal!"
   utter_verified:
@@ -127,15 +136,18 @@ responses:
 
 actions:
   - action_show_all_use_classes
-  - action_validate_use_class
-  - action_validate_postal_code
-  - action_validate_floor
-  - action_validate_unit
+  - validate_verify_form
+  - action_validate_use_class # to be deprecated
+  - action_validate_postal_code # to be deprecated
+  - action_validate_floor # to be deprecated
+  - action_validate_unit # to be deprecated
   - action_verify_proposal
   - action_get_similar_cases
   - action_get_more_similar_cases
   - action_explain_outcome
-
+  - action_submit_proposal
+  - action_reset_slots
+  - action_set_live_music
 
 forms:
   verify_form:
