--- a/chatbot/config.yml
+++ b/chatbot/config.yml
@@ -19,10 +19,15 @@ pipeline:
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
-  - name: MemoizationPolicy
-  - name: TEDPolicy
-    max_history: 6
-    epochs: 100
-  - name: MappingPolicy
-  - name: FormPolicy
-  - name: RulePolicy
+- name: TEDPolicy
+  max_history: 10
+  epochs: 50
+  batch_size:
+  - 32
+  - 64
+- max_history: 3
+  name: AugmentedMemoizationPolicy
+- name: RulePolicy
+  core_fallback_threshold: 0.3
+  core_fallback_action_name: "action_default_fallback"
+  enable_fallback_prediction: True
