--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -34,6 +34,10 @@ services:
       INIT_SQL: "true"
       INIT_GRAPH: "true"
       GUIDELINES_CSV_FILE: "Guidelines_Criteria.csv"
+      POSTAL_CODE_JSON_FILE: "Postal_Code.json"
+      HDB_COMMERCIAL_JSON_FILE: "HDB_Commercial.json"
+      SHOPHOUSE_JSON_FILE: "Shophouse.json"
+      LAND_USE_JSON_FILE: "Land_Use.json"
       CASES_DATA_DIRECTORY: ""
     networks:
       - supa-network
