--- a/chatbot/data/nlu/general.yml
+++ b/chatbot/data/nlu/general.yml
@@ -591,3 +591,20 @@ nlu:
     - edit proposal
     - amend proposal
     - make changes
+- intent: thanks
+  examples: |
+    - thanks
+    - ty
+    - thank you
+    - thankss
+    - thanks so much
+    - thank you so much
+    - tyvm
+    - thanks very much
+    - much thanks
+    - thx
+    - thx man
+    - thanks man
+    - thank you for your help
+    - thanks for ur help
+    - thank u
