--- a/chatbot/data/nlu/entities.yml
+++ b/chatbot/data/nlu/entities.yml
@@ -1,11 +1,16 @@
 version: "2.0"
 nlu:
-- synonym: postal code
+- synonym: postal_code
   examples: |
     - postal
     - postalcode
     - post code
     - postal code
+    - Post
+    - Postal
+    - Postal Code
+    - Postal code
+    - Post code
 - synonym: floor
   examples: |
     - storey
@@ -13,11 +18,26 @@ nlu:
     - floor number
     - level number
     - floor
+    - floor no
+    - Floor
+    - Level
+    - Floor number
+- synonym: lot_number
+  examples: |
+    - lot
+    - Lot
+    - lot number
+    - Lot number
+    - Lot Number
+    - Lot no
 - synonym: unit
   examples: |
     - unit number
     - unit
-- synonym: use class
+    - unit no
+    - Unit
+    - Unit Number
+- synonym: use_class
   examples: |
     - useclass
     - business use
@@ -26,10 +46,24 @@ nlu:
     - uses
     - proposed use class
     - use class
-
-- lookup: use class
+    - Use Class
+    - Proposed Use Class
+    - Use class
+- synonym: use_description
   examples: |
-    - Restaurant
-    - Pet Shop
-    - Office
-#    - add on
+    - proposed use description
+    - use description
+    - description
+    - Use description
+    - Use Description
+    - Proposed Use Desc
+    - use desc
+    - desc
+    - Proposed Use Description
+    - Use desc
+- synonym: gross_floor_area
+  examples: |
+    - gross floor area
+    - gfa
+    - GFA
+    - Gross Floor Area
