--- a/chatbot/domain.yml
+++ b/chatbot/domain.yml
@@ -26,13 +26,16 @@ entities:
 - postal_code
 - floor
 - unit
+- lot_number
+- gross_floor_area
+- use_description
 
 slots:
   use_class:
     type: text
-  use_desc:
+  use_description:
     type: text
-  gfa:
+  gross_floor_area:
     type: text
   lot_number:
     type: text
@@ -99,9 +102,9 @@ responses:
   - text: "Sure, what would you like to clarify?"
   utter_ask_use_class:
   - text: "What will be the proposed use class?"
-  utter_ask_use_desc:
+  utter_ask_use_description:
   - text: "What is the proposed use description?"
-  utter_ask_gfa:
+  utter_ask_gross_floor_area:
   - text: "What's the gross floor area?"
   utter_ask_postal_code:
   - text: "What is the postal code for your location?"
@@ -132,7 +135,7 @@ responses:
   utter_verifying:
   - text: "Thanks for the information! Give me a moment while I evaluate your proposal!"
   utter_verify_form_inputs:
-  - text: "Could you review the following details?\n\n{form_inputs}"
+  - text: "These are your inputs. Do they look correct? \n\n{form_inputs}"
   utter_verified:
   - text: "Thanks for waiting! Here's the evaluation outcome! \n\n {outcome}"
   utter_ask_similar:
@@ -182,9 +185,9 @@ forms:
   verify_form:
     use_class:
       - type: from_text
-    use_desc:
+    use_description:
       - type: from_text
-    gfa:
+    gross_floor_area:
       - type: from_text
     postal_code:
       - type: from_text
