change floor and unit to string type, comment validation code

--- a/chatbot/domain.yml
+++ b/chatbot/domain.yml
@@ -42,9 +42,9 @@ slots:
   postal_code:
     type: float
   floor:
-    type: float
+    type: text
   unit:
-    type: float
+    type: text
   block:
     type: float
   road:
