feat: basic verify proposal flow (#43)
* add rule policy

* add responses, actions, forms

* add rule for forms

* add forms, slots in domain

* add entities

* add basic stories for verify

* add method definitions for kg api

* update entities

* add version

* fix typo

* v1 working, less actions

* define action classes

* add utters

* add kg api

* add location api

* add general validator

* add requests lib to requirements

* implement some custom actions

* add slots

* instantiate action api classes

* impl get similar case action

* wire up get similar cases action with backend api contract

* impl name function

* update training data

* update actions

* update config

* update domain

* explain + review deny story

* basic chatbot flows done

* change floor and unit to string type, comment validation code

--- a/chatbot/data/nlu/general.yml
+++ b/chatbot/data/nlu/general.yml
@@ -44,6 +44,8 @@ nlu:
     - Yep!
     - Yepp
     - Yes
+    - yes
+    - yess
     - Yes I do
     - Yes please
     - Yes please!
@@ -206,7 +208,6 @@ nlu:
     - yes,i am
     - yes.
     - yesh
-    - yess
     - yessoo
     - yesss
     - yesssss
@@ -590,3 +591,20 @@ nlu:
     - edit proposal
     - amend proposal
     - make changes
+- intent: thanks
+  examples: |
+    - thanks
+    - ty
+    - thank you
+    - thankss
+    - thanks so much
+    - thank you so much
+    - tyvm
+    - thanks very much
+    - much thanks
+    - thx
+    - thx man
+    - thanks man
+    - thank you for your help
+    - thanks for ur help
+    - thank u
