--- a/chatbot/data/nlu/verify.yml
+++ b/chatbot/data/nlu/verify.yml
@@ -83,5 +83,34 @@ nlu:
     - I want to submit my [application]
     - I would like to submit
     - i'd like to proceed with submission
-
+- intent: enter_data
+  examples: |
+    - [postal code]{"entity":"postal_code"}
+    - [postal]{"entity":"postal_code"}
+    - [use class]{"entity":"use_class"}
+    - [proposed use class]{"entity":"use_class"}
+    - [description]{"entity":"use_description"}
+    - [use description]{"entity":"use_description"}
+    - [proposed use description]{"entity":"use_description"}
+    - [unit number]{"entity":"unit"}
+    - [floor number]{"entity":"floor"}
+    - [unit]{"entity":"unit"}
+    - [floor]{"entity":"floor"}
+    - [level]{"entity":"floor"}
+    - [lot]{"entity":"lot_number"}
+    - [lot number]{"entity":"lot_number"}
+    - [unit no]{"entity":"unit"}
+    - [unit no]{"entity":"unit"}
+    - [lot no]{"entity":"lot_number"}
+    - [lot no]{"entity":"lot_number"}
+    - [floor no]{"entity":"floor"}
+    - [gfa]{"entity":"gross_floor_area"}
+    - [gross floor area]{"entity":"gross_floor_area"}
+    - [Gross Floor Area]{"entity":"gross_floor_area"}
+    - [GFA]{"entity":"gross_floor_area"}
+    - [Use Class]{"entity":"use_class"}
+    - [Postal]{"entity":"postal_code"}
+    - [Use description]{"entity":"use_description"}
+    - [Unit]{"entity":"unit"}
+    - [Floor]{"entity":"floor"}
 
