--- a/chatbot/data/rules/rules.yml
+++ b/chatbot/data/rules/rules.yml
@@ -1,13 +1,52 @@
 version: "2.0"
 
 rules:
-
-- rule: Say goodbye anytime the user says goodbye
+- rule: activate_verify_form
   steps:
-  - intent: goodbye
-  - action: utter_goodbye
+  - intent: verify_proposal
+  - action: utter_verify
+  - action: verify_form
+  - active_loop: verify_form
 
-- rule: Say 'I am a bot' anytime the user challenges
-  steps:
-  - intent: bot_challenge
-  - action: utter_iamabot
+#- rule: activate_restaurant_form
+#  steps:
+#  - slot_was_set:
+#    - use_class: Restaurant
+#  - intent: submit_proposal
+#  - action: utter_restaurant_before_submit
+#  - action: restaurant_form
+#  - active_loop: restaurant_form
+#
+#- rule: activate_restaurant_form
+#  steps:
+#  - slot_was_set:
+#    - use_class: Bar/Pub
+#  - intent: submit_proposal
+#  - action: utter_restaurant_before_submit
+#  - action: restaurant_form
+#  - active_loop: restaurant_form
+#
+#- rule: activate_restaurant_form
+#  steps:
+#  - slot_was_set:
+#    - use_class: Restaurant and Bar
+#  - intent: submit_proposal
+#  - action: utter_restaurant_before_submit
+#  - action: restaurant_form
+#  - active_loop: restaurant_form
+#
+#- rule: activate_restaurant_form
+#  steps:
+#  - slot_was_set:
+#    - use_class: Nightclub
+#  - intent: submit_proposal
+#  - action: utter_restaurant_before_submit
+#  - action: restaurant_form
+#  - active_loop: restaurant_form
+#
+#- rule: activate_live_music_form
+#  steps:
+#  - slot_was_set:
+#    - live_music: true
+#  - action: live_music_form
+#  - active_loop: live_music_form
