--- a/chatbot/credentials.yml
+++ b/chatbot/credentials.yml
@@ -31,3 +31,9 @@ rest:
 # for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
   url: "http://localhost:5002/api"
+
+telegram:
+  access_token: "1661644890:AAGLrqSuQNLaaOpa1sz4nv2mQUJyfPxtB8M"
+  verify: "SupaPlannerBot"
+#  url is not fixed
+  webhook_url: "https://687c14b43e23.ngrok.io/webhooks/telegram/webhook"
